--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-plugin-inline-react-svg": "^1.1.0",
+    "babel-plugin-root-import": "^6.1.0",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
