--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-	"presets": ["next/babel"],
+	"presets": [
+        "next/babel",
+        "@zeit/next-typescript/babel"
+    ],
 	"plugins": [
 		"babel-plugin-root-import",
 		"babel-plugin-inline-react-svg"
