--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^11.13.8",
     "@types/react": "^16.8.14",
     "@types/react-dom": "^16.8.4",
+    "@types/styled-jsx": "^2.2.8",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
     "babel-plugin-inline-react-svg": "^1.1.0",
     "babel-plugin-root-import": "^6.1.0",
+    "html-typings": "^1.1.2",
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
