--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,15 @@
         "skipLibCheck": true,
         "sourceMap": true,
         "strict": true,
-        "target": "esnext"
-    }
+        "target": "esnext",
+        "baseUrl": ".",
+        "paths": {
+            "~*": ["./*"]
+        }
+    },
+    "exclude": [
+        "node_modules/",
+        ".next/"
+    ]
 }
   
