--- a/next/package.json
+++ b/next/package.json
@@ -22,8 +22,9 @@
     "rxjs-hooks": "^0.4.3"
   },
   "devDependencies": {
-    "jest": "^24.7.1",
+    "cypress": "^3.2.0",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1"
+    "enzyme-adapter-react-16": "^1.12.1",
+    "jest": "^24.7.1"
   }
 }
