fixes now routing for next app

--- a/now.json
+++ b/now.json
@@ -18,6 +18,6 @@
     "routes": [{
         "src": "/api", "dest": "/api"
     }, {
-        "src": "/", "dest": "/next"
+        "src": "/*", "dest": "/next"
     }]
 }
