fixes api url now file

--- a/now.json
+++ b/now.json
@@ -6,7 +6,7 @@
         "planahead.app"
     ],
     "builds": [{ 
-        "src": "next/next.config.js", 
+        "src": "next.config.js", 
         "use": "@now/next"
     }],
     "env": {
