adds <WeatherDetails /> and more tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@types/jest": "^24.0.11",
